<resources>
    <string name="app_name">راهان‌دیتا</string>
    <string name="code_melli">کد ملی خود را وارد نمایید</string>
    <string name="login">ورود</string>
    <string name="companyLogo">لوگوی شرکت</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="choose">انتخاب کنید</string>
    <string name="project_name">نام پروژه</string>
    <string name="project_date">تاریخ انجام</string>
    <string name="line_number">شماره خط</string>
    <string name="next">بعدی</string>
    <string name="terminal">مکان</string>
    <string name="choose_time">انتخاب کنید</string>
    <string name="please_wait">لطفا منتظر بمانید</string>
    <string name="error">خطا</string>
    <string name="connection_error">خطا در اتصال به سرور</string>
    <string name="server_loading">در حال بارگزاری</string>
</resources>
